deployments/default/values/manifests/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-cd-ingressroute
  namespace: argo-cd
spec:
  entrypoints:
    - websecure
  routes:
    - match: Host(`argo.home.phuchoang.sbs`)
      kind: Rule
      services:
        - name: argo-cd-argocd-server
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingressroute
  namespace: longhorn-system
spec:
  entrypoints:
    - websecure
  routes:
    - match: Host(`longhorn.home.phuchoang.sbs`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: model-serving-ingress
  namespace: model-serving
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`fraud.home.phuchoang.sbs`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: fraud-detection
          port: 8000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.home.phuchoang.sbs`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
